fixed spacing on bus sol index stylesheet

--- a/app/assets/stylesheets/businesssolutions.css.scss
+++ b/app/assets/stylesheets/businesssolutions.css.scss
@@ -19,7 +19,8 @@
 	text-align: center;
 }
 
-#servicedescription {
+#serviceexcerpt {
+    padding:  0 4% 0 4%;
 	width: 68%;
 	font-size: 18px;
 	/*text-align: center;*/
